<resources>
    <string name="app_name">Quiz App</string>
        <string name="question_activity_quiz">Enter question</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quiz_question_label">Question</string>
    <string name="true_text">True</string>
    <string name="false_text">False</string>
    <string name="true_or_false_label">Is the answer true or false?</string>
    <string name="questions_list_label">Questions</string>
    <string name="new_question">New Question</string>
    <string name="undo_option">UNDO</string>
    <string name="question_delete_msg">%1$s deleted</string>
    <string name="submit_answer_button">Submit</string>
    <string name="quizModeButtonText">Take Quiz</string>
    <string name="quizEditButtonText">Edit Quiz</string>
    <string name="quizMenuText">Q U I Z</string>
</resources>