<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizQuestionsFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_marginBaseline="0dp">

        <TextView
            android:id="@+id/question_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz_question_label" />

        <EditText
            android:id="@+id/quiz_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/question_activity_quiz"

            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="@color/black" />

        <TextView
            android:id="@+id/truefalse_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/true_or_false_label" />

        <ToggleButton
            android:id="@+id/answer_true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#455A64"
            android:textOff="@string/true_text"
            android:textOn="@string/false_text" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>